test/files/invalid/array_syntax_error.stderr
[0m[1m[38;5;9merror[0m[1m: unrecognized token `;`, expected one of ":", "]"[0m
  [0m[34m┌─[0m test/files/invalid/array_syntax_error.fbs:2:11
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   x: [bool[0m[31m;[0m 4];
  [0m[34m│[0m           [0m[31m^[0m

Error: Bailing because of errors
